# RL-MCPTOOL

./: .gitignore  README.md  pyproject.toml
Paper/: proposal.tex
configs/: mcpalign_mve.yaml  mcpalign_mve_position.yaml  mcptox_defender.yaml  mcptox_defense.yaml  mve.yaml  vulngrpo_mini.yaml  vulngrpo_profile.yaml
data/mcpalign/: benign_tasks.json  multistep_tasks.json  position_controlled_tasks.json  tool_registry.json
data/mcptox/: analysis.ipynb  (+1 more)
docs/: Exp-Prepare.md  GRPO-day1-24GB.md  MCPDefender.md  NextSteps.md  SafeMCP.md  TODO.md  dcc-xu-lab.md  temp-result.md
experiments/: judge_cache.jsonl
scripts/: analyze.py  build_t1_grpo_data.py  eval_bf16_baseline.py  eval_grpo_quick.py  eval_trained_model.py  evaluate.py  mcpalign_analyze.py  mcpalign_evaluate.py  mcpalign_generate_data.py  mcpalign_mve.py  mcpalign_mve_position.py  mcpalign_train_dpo.py  mcpalign_train_grpo.py  mcpalign_train_sft.py  mcptox_analyze.py  mcptox_build_training_data.py  mcptox_compare_to_mcptox.py  mcptox_defense_baseline.py  mcptox_defense_report.py  mcptox_rejudge.py  mcptox_run_qwen3.py  mcptox_train_grpo.py  mcptox_validate_judge.py  qwen3_defense_eval.py  qwen3_judge_responses.py  qwen3_sanity_check.py  train.py  transfer.py  vulngrpo_analyze.py  vulngrpo_mini.py  vulngrpo_profile.py
slurm/: download_qwen3.sh  run_bf16_baseline.sh  run_dpo.sh  run_eval_dpo.sh  run_eval_sft.sh  run_grpo.sh  run_mcptox_defense.sh  run_mve.sh  run_mve_position.sh  run_qwen3_defense.sh  run_qwen3_mcptox.sh  run_qwen3_sanity.sh  run_sft.sh  run_vulngrpo_mini.sh  run_vulngrpo_profile.sh
(+546 files in other folders)
